--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "devDependencies": {
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-top-level-await": "^1.3.0",
+    "vite-plugin-wasm": "^3.2.2"
+  },
+  "dependencies": {
+    "manifold-3d": "^2.1.0"
   }
 }
